@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-09T00:35:39Z",
+  "timestamp" : "2024-10-10T00:35:36Z",
   "count_outdated" : 503,
   "uniques_outdated" : 330,
-  "count" : 505,
-  "uniques" : 332,
+  "count" : 506,
+  "uniques" : 333,
   "clones" : [
     {
       "timestamp": "2024-10-04T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-10-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
